<?xml version="1.0"?>
<package format="2">
  <name>davros_description</name>
  <version>1.0.0</version>
  <description>URDF description of the Davros robot.</description>
  
  <maintainer email="bestmann@informatik.uni-hamburg.de">Marc Bestmann</maintainer>
  <author email="bestmann@informatik.uni-hamburg.de">Marc Bestmann</author>
  <author email="info@bit-bots.de">Hamburg Bit-Bots</author>

  
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>roscpp</depend>
  <depend>sensor_msgs</depend>
  <depend>tf</depend>
  <depend>urdf</depend>
  <depend>xacro</depend>


  <export>
      <status>broken</status>
      <language>xacro</language>
  </export>
</package>
